Fix dynamic java agent warning during tests.