@@ -72,12 +72,7 @@
 
     <!-- JVM options for unit tests. -->
     <test.vm.args>
-      --add-opens
-      nepherte.commons.cli/com.nepherte.commons.cli=ALL-UNNAMED
-      --add-opens
-      nepherte.commons.cli/com.nepherte.commons.cli.parser=ALL-UNNAMED
-      --add-opens
-      nepherte.commons.cli/com.nepherte.commons.cli.internal=ALL-UNNAMED
+      -javaagent:@{net.bytebuddy:byte-buddy-agent:jar}
     </test.vm.args>
   </properties>
 
@@ -133,6 +128,13 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>3.8.1</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>properties</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
